Fix nowrap

--- a/src/client/components/MainFooter/MainFooter.module.scss
+++ b/src/client/components/MainFooter/MainFooter.module.scss
@@ -160,7 +160,7 @@
   width: 24rem;
 
   li {
-    white-space: nowrap;
+    // white-space: nowrap;
     a {
       font-weight: bold;
     }
